/*
 * SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package monitoringserver;

service MonitoringServerConnection {
  rpc SendContainerList (ContainerList) returns (SendContainerListResponse);
}

message SendContainerListResponse {
  string resp = 1;
}

message ContainerList {
  string node_name =1;
  repeated ContainerInfo containers = 2;
}

message ContainerInfo {
  string id = 1;
  repeated string names = 2;
  string image = 3;
  map<string, string> state = 4;
  map<string, string> config = 5;
  map<string, string> annotation = 6;
  map<string, string> stats = 7;
}